--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,21 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <style>
+    .icon_btn {
+        background-color: #E7E7E7; /* Gray */
+        border: none;
+        color: black;
+        padding: 2px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 2px;
+        cursor: pointer;
+    }
+  </style>
   </head>
   <body>
     <section class="page-header">
@@ -15,11 +30,11 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.repository_url }}" class="btn"><i class="fa fa-github"></i> View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+      <a href="{{ site.github.zip_url }}" class="btn"><i class="fa fa-download"></i> Download .zip</a>
+      <a href="{{ site.github.tar_url }}" class="btn"><i class="fa fa-download"></i> Download .tar.gz</a>
       {% endif %}
     </section>
 
@@ -31,19 +46,20 @@
             <th>Name</th>
             <th>Description</th>
             <th>CSS Framework</th>
-            <th> </th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
       {% for item in site.website_theme %}
           <tr>
-            <td> <a href="{{ item.name | prepend: "theme" }}.php">{{ item.name | prepend: "theme" }}</a> </td>
+            <td> {{ item.name | prepend: "theme" }} </td>
             <td> {{ item.desc }} </td>
             <td> {{ item.cssf }} </td>
             <td>
-        {% if item.pwfn != nil %} 
-        <a title="Preview" href="{{ site.preview_path | append: item.name }}.php?u={{ item.pwfn }}" target="_blank">&#x1f50d;</a> 
-        {% endif %} 
+              <a class="icon_btn" title="Download" href="{{ item.name | prepend: "theme" }}.php"><i class="fa fa-download fa-fw"></i></a>
+              {% if item.pwfn != nil %} 
+              <a class="icon_btn" title="Preview" href="{{ site.preview_path | append: item.name }}.php?u={{ item.pwfn }}" target="_blank"><i class="fa fa-search fa-fw"></i></a>
+              {% endif %} 
             </td>
           </tr>
       {% endfor %}
