--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,12 @@
         padding: 2px;
         text-align: center;
         text-decoration: none;
-        display: inline-block;
         font-size: 20px;
         margin: 2px;
         cursor: pointer;
+    }
+    td:last-child {
+        white-space: nowrap;
     }
   </style>
   </head>
