--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,4 @@
 .download:before {content: '\1F4E5';}
 .preview:before {content: '\1F50D';}
 .phone:before {content: '\1F4F1';}
+.action:hover, .action:focus {text-decoration: none; font-weight: normal;}
