--- a/_includes/table.html
+++ b/_includes/table.html
@@ -1,7 +1,7 @@
 <table>
  <thead>
    <tr>
-     <th>Name</th>
+     <th>Filename</th>
      <th>Description</th>
      <th>CSS Framework</th>
      <th>Actions</th>
@@ -10,7 +10,7 @@
  <tbody>
 {% for item in site.website_theme %}
    <tr>
-     <td> {{ item.name | prepend: "theme" }} </td>
+     <td> {{ item.name | prepend: "theme" }}.php </td>
      <td> {{ item.desc }} </td>
      <td> {{ item.cssf }} </td>
      <td>
