--- a/_includes/table.html
+++ b/_includes/table.html
@@ -8,7 +8,7 @@
    </tr>
  </thead>
  <tbody>
-{% for item in site.website_theme %}
+{% for item in page.website_theme %}
    <tr>
      <td> {{ item.name | prepend: "theme" }}.php </td>
      <td> {{ item.desc }} </td>
