--- a/_includes/table.html
+++ b/_includes/table.html
@@ -13,7 +13,7 @@
      <td> {{ item.name | prepend: "theme" }}.php </td>
      <td> {{ item.desc }} </td>
      <td> {{ item.cssf }} </td>
-     <td style="background-color: white;border: 1px solid black;">
+     <td style="background-color: white;border: 1px solid black;box-sizing: border-box;">
        <a class="action" title="Download" href="{{ item.name | prepend: "theme" }}.php"><span class="download"></span></a>
        {% if item.pwfn != nil %} 
        <a class="action" title="Preview" href="{{ site.preview_path | append: item.name }}.php?u={{ item.pwfn }}" target="_blank"><span class="preview"></span></a>
