--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 
 @import "{{ site.theme }}";
 
+td:last-child {background: white; border: 1px solid black; padding: 0; padding-left: 10px;}
 .download:before {content: '\1F4E5';}
 .preview:before {content: '\1F50D';}
 .phone:before {content: '\1F4F1';}
